@@ -137,6 +137,7 @@ printUsage(std::ostream &out, const char* whoAmI, bool full)
   out << "     --               Parse from stdin." << std::endl
       << " -s, --silent         Do not display anything than the actual result." << std::endl
       << "     --mlp            Use dlvhex+mlp solver (modular nonmonotonic logic programs)" << std::endl
+      << "     --forget         Forget previous instantiations that are not involved in current computation (mlp setting)." << std::endl
       << "     --num=<N>        Computes at most N answer sets (N=0 computes all)" << std::endl
     //        << "--strongsafety     Check rules also for strong safety." << std::endl
       << " -p, --plugindir=DIR  Specify additional directory where to look for plugin" << std::endl
@@ -295,6 +296,7 @@ int main(int argc, char *argv[])
   pctx.config.setOption("NoFacts",0);
   pctx.config.setOption("MLP", 0);
   pctx.config.setOption("NMLP", 0);
+  pctx.config.setOption("Forget", 0);
 
 	// defaults of main
 	Config config;
@@ -541,6 +543,7 @@ void processOptionsPrePlugin(
 		{ "nofacts", no_argument, &longid, 12 },
 		{ "mlp", no_argument, &longid, 13 },
 		{ "num", required_argument, &longid, 14 },
+		{ "forget", no_argument, &longid, 15 },
 		{ NULL, 0, NULL, 0 }
 	};
 
@@ -768,6 +771,9 @@ void processOptionsPrePlugin(
 					break;
 				case 14:
 					pctx.config.setOption("NMLP",atoi(optarg));
+					break;
+				case 15:
+					pctx.config.setOption("Forget",1);
 					break;
 				}
 			break;
