@@ -1,3 +1,9 @@
+2010-04-25  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
+
+	* include/dlvhex/MLPSolver.hpp: Add option --forget (forgetting instantiation)
+	* src/dlvhex/dlvhex.cpp: Likewise.
+	* src/dlvhex/State.cpp: Likewise.
+
 2010-04-24  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 
 	* generator/genExampleCore.sh: Generate 'interesting' examples.
